# very_simple_to-do_server

./: Cargo.toml  README.md
migration/src/: lib.rs  m20250815_070458_create_todos_table.rs
src/: handlers.rs  main.rs  routes.rs
src/entities/: todo.rs
