[package]
name = "very_simple_to-do_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"]}
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
actix-web = "4"

[dev-dependencies]
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }